k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      labels:
        app: test-backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: test-backend
          image: asdutoit/go_backend:0.0.3
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 8080
