k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend-service
spec:
  selector:
    app: test-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
